--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
-            name="description"
-            content="Web site created using create-react-app"
+            name="employees"
+            content="A list of employees"
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-    <title>React App</title>
+    <title>Сотрудники</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
